--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -101,6 +101,32 @@ http {
 	    	}
 	    }
 
+      location /wordpress/ {
+        index index.html index.php;
+        if (-f $request_filename/index.html){
+          rewrite (.*) $1/index.html break;
+        }
+        if (-f $request_filename/index.php){
+          rewrite (.*) $1/index.php;
+        }
+        if (!-f $request_filename){
+          rewrite (.*) /wordpress/index.php;
+        }
+      }
+
+      location /typecho/ {
+        index index.html index.php;
+        if (-f $request_filename/index.html){
+          rewrite (.*) $1/index.html break;
+        }
+        if (-f $request_filename/index.php){
+          rewrite (.*) $1/index.php;
+        }
+        if (!-f $request_filename){
+          rewrite (.*) /typecho/index.php;
+        }
+      }
+
 	    #set the 40x error page
 	    error_page  400 401 402 403 404  /40x.html;
 	    location = /40x.html {
@@ -117,8 +143,8 @@ http {
 	    }
 
 	    # pass the PHP scripts to FastCGI server by tcp socket way other than listening on 127.0.0.1:9000
-	    location  ~ .*\.php(\/.*)*$ {
-	    	fastcgi_split_path_info ^(.+\.php)(/.+)$;
+	    location  ~ .php$ {
+	    	# fastcgi_split_path_info ^(.+\.php)(/.+)$;
 	    	fastcgi_pass   php:9000;
 	    	# the better form of fastcgi_pass than before
 	    	# fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
