--- a/docker/fpm7.1/Dockerfile
+++ b/docker/fpm7.1/Dockerfile
@@ -12,4 +12,4 @@ RUN docker-php-ext-install -j$(nproc) iconv mcrypt \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
 		&& docker-php-ext-install -j$(nproc) mysqli pdo_mysql \
-		opcache zip bcmath shmop sockets soap hash zlib
+		opcache zip bcmath shmop sockets soap
