--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,12 +55,32 @@ http {
     gzip_disable "MSIE [1-6].(?!.*SV1)";
 
     server {
-	    listen               80;
-	    server_name          _;
+		listen               443 ssl http2;
+	    server_name          yaecho.net www.yaecho.net;
+	    
+	    ssl on;
+	    # the ssl certificate related with the url of https://typecodes.com/web/lnmppositivessl.html
+	    ssl_certificate /data/ssl/yaecho.net/fullchain.pem;
+	    # the secret key related with the url of https://typecodes.com/web/lnmppositivessl.html
+	    ssl_certificate_key /data/ssl/yaecho.net/privkey.pem;
+		
+	    ssl_session_cache shared:SSL:10m;
+	    ssl_session_timeout 10m;
+	    # enables TLSv1, but not SSLv2, SSLv3 which is weak and should no longer be used.
+	    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+	    ssl_prefer_server_ciphers on;
+	    #ssl_dhparam /etc/nginx/ssl/dhparams.pem;
+	    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:DHE-RSA-AES128-GCM-SHA256:AES256+EDH:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+	    # enables google spdy, version 3.1
+	    # add_header Alternate-Protocol 443:npn-spdy/3.1;
+	    # only the access of my blog(typecodes.com) by https
+	    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;preload";
+	    add_header X-Frame-Options DENY;
+	    add_header X-Content-Type-Options nosniff;
 
 	    #set the website's root dir
-	    root   /data/www;
-	    index  index.php index.html;
+	    root   /data/server/www/yaecho;
+	    index  index.html index.php;
 
 	    charset utf-8;
 
@@ -101,31 +121,6 @@ http {
 	    	}
 	    }
 
-      location /wordpress/ {
-        index index.html index.php;
-        if (-f $request_filename/index.html){
-          rewrite (.*) $1/index.html break;
-        }
-        if (-f $request_filename/index.php){
-          rewrite (.*) $1/index.php;
-        }
-        if (!-f $request_filename){
-          rewrite (.*) /wordpress/index.php;
-        }
-      }
-
-      location /typecho/ {
-        index index.html index.php;
-        if (-f $request_filename/index.html){
-          rewrite (.*) $1/index.html break;
-        }
-        if (-f $request_filename/index.php){
-          rewrite (.*) $1/index.php;
-        }
-        if (!-f $request_filename){
-          rewrite (.*) /typecho/index.php;
-        }
-      }
 
 	    #set the 40x error page
 	    error_page  400 401 402 403 404  /40x.html;
@@ -146,8 +141,6 @@ http {
 	    location  ~ .php$ {
 	    	# fastcgi_split_path_info ^(.+\.php)(/.+)$;
 	    	fastcgi_pass   php:9000;
-	    	# the better form of fastcgi_pass than before
-	    	# fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
 	    	fastcgi_index  index.php;
 	    	fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
 	    	include        fastcgi_params;
