--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -153,4 +153,10 @@ http {
 	    #    deny  all;
 	    #}
     }
+
+	server{
+		listen 80;
+		server_name yaecho.net www.yaecho.net;
+		rewrite ^(.*)$  https://$host$1 permanent;
+	}
 }
