--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -121,14 +121,6 @@ http {
 	    	}
 	    }
 
-
-	    #set the 40x error page
-	    error_page  400 401 402 403 404  /40x.html;
-	    location = /40x.html {
-	    	root   html;
-	    	index  index.html index.htm;
-	    }
-
 	    # redirect server error pages to the static page /50x.html
 	    #
 	    error_page   500 501 502 503 504  /50x.html;
@@ -138,7 +130,7 @@ http {
 	    }
 
 	    # pass the PHP scripts to FastCGI server by tcp socket way other than listening on 127.0.0.1:9000
-	    location  ~ .php$ {
+	    location  ~ .*\.php(\/.*)*$ {
 	    	# fastcgi_split_path_info ^(.+\.php)(/.+)$;
 	    	fastcgi_pass   php:9000;
 	    	fastcgi_index  index.php;
