--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,7 +79,7 @@ http {
 	    add_header X-Content-Type-Options nosniff;
 
 	    #set the website's root dir
-	    root   /data/server/www/yaecho;
+	    root   /data/www/yaecho;
 	    index  index.html index.php;
 
 	    charset utf-8;
