--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -67,7 +67,7 @@ http {
 	    ssl_session_cache shared:SSL:10m;
 	    ssl_session_timeout 10m;
 	    # enables TLSv1, but not SSLv2, SSLv3 which is weak and should no longer be used.
-	    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+	    ssl_protocols TLSv1.3 TLSv1.2 TLSv1.1 TLSv1;
 	    ssl_prefer_server_ciphers on;
 	    #ssl_dhparam /etc/nginx/ssl/dhparams.pem;
 	    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:DHE-RSA-AES128-GCM-SHA256:AES256+EDH:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
@@ -97,11 +97,6 @@ http {
 	    location = /config.inc.php{
 	    	deny  all;
 	    }
-
-	    # keep the uploads directory safe by excluding php, php5, html file accessing. Applying to wordpress and typecho.
-	    # location ~ .*/uploads/.*\.(php|php5|html)$ {
-	    #	deny  all;
-	    # }
 
 	    # keep the plugins directory safe by excluding php, php5, html file accessing. Applying to wordpress and typecho.
 	    location ~ .*/plugins/.*\.(php|php5|html)$ {
